--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "file-loader": "^6.2.0",
-    "html-loader": "^2.1.2",
-    "webp-loader": "^0.6.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "css-loader": "^5.2.4",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.35.0",
